# cookiecutter-pypackage

./: pyproject.toml  tox.ini
.github/workflows/: dev.yml
